--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                          Lot 50, Kinoya, Suva ·
                         <a href="mailto:name@email.com">sauniluisa@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am graduate in economics and official statistics.</p>
+                    <p class="lead mb-5">I am a graduate in Economics and Official Statistics.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
@@ -83,14 +83,14 @@
                             <h3 class="mb-0">University of the South Pacific, Laucala Campus, Fiji</h3>
                             <div class="subheading mb-3">Bachelors of Commerce in Economics and Official Statistics</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2018 - May 2021</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"> 2018 - 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Secondary School Education</h3>
                             <div class="subheading mb-3">Saint Joseph’s Secondary School, Fiji</div>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2013 - May 2017</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2013 - 2017</span></div>
                     </div>
                 </div>
             </section>
@@ -147,7 +147,7 @@ Interpersonal Skills
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>, I enjoy most of my time being outdoors. I enjoy Traveling, swimming.</p>
+                    <p> I enjoy most of my time being outdoors. I enjoy Traveling, swimming.</p>
                     <p class="mb-0">When indoors I spend a large amount of my free time learning new skills.</p>
                 </div>
             </section>
