--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Sauni</span>
                     </h1>
                     <div class="subheading mb-5">
-                         Lot 50, Kinoya, Suva ·
+                         Lot 75 Mawaraka Place, Sukanaivalu Road, Suva.
                         <a href="mailto:name@email.com">sauniluisa@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am a graduate in Economics and Official Statistics.</p>
